Started About Me state with functional buttons on nav

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
 main {
   margin: 0 auto;
@@ -14,6 +14,7 @@ main {
   --light: #fafafa;
   --dark: #000000;
   --darker: #111111;
+  --background2: rgb(20, 20, 20);
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -36,7 +37,7 @@ body {
   line-height: 1.5;
   font-size: 18px;
   letter-spacing: 0.1em;
-  background: var(--dark);
+  background: var(--background2);
   color: var(--light);
   font-family: "Poiret One", cursive;
 }
