--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,8 @@ body {
   letter-spacing: 0.1em;
   background: var(--background2);
   color: var(--light);
-  font-family: "Poiret One", cursive;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h1,
