--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-/* @tailwind base;
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;
 
 main {
   margin: 0 auto;
@@ -41,6 +41,10 @@ body {
   color: var(--light);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body:hover {
+  cursor: pointer;
 }
 
 h1,
@@ -187,6 +191,18 @@ textarea {
 .flex-end {
   justify-content: flex-end;
 }
+#font-size {
+  font-size: 1.89rem;
+}
+
+#footer-center {
+  flex-direction: row;
+  justify-content: center;
+}
+
+.center {
+  align-items: center;
+}
 
 .mx-1 {
   margin-right: var(--spacing-one);
@@ -294,4 +310,15 @@ a {
 
 .navActive {
   color: var(--secondary);
+}
+
+/*i have 3 icon favicon icons in html that needs to be centered on midle of the footer*/
+#favicon:hover {
+  cursor: pointer;
+}
+
+#flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
