--- a/src/index.css
+++ b/src/index.css
@@ -365,6 +365,19 @@ a {
   color: var(--secondary);
 }
 
+#contact-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--primary);
+}
+
+#name,
+#email,
+#message {
+  font-size: 1.1rem;
+  color: var(--secondary);
+}
+
 /* when #github-link and #deployed-link is hovered it changes opacity*/
 #github-link:hover,
 #deployed-link:hover {
