--- a/src/index.css
+++ b/src/index.css
@@ -378,6 +378,19 @@ a {
   color: var(--secondary);
 }
 
+#resume-title {
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--primary);
+}
+
+#front-end-title,
+#back-end-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--secondary);
+}
+
 /* when #github-link and #deployed-link is hovered it changes opacity*/
 #github-link:hover,
 #deployed-link:hover {
